Bug 1271524 - Move tab widget to WidgetCache. r=acomminos